force-app/main/default/objects/Additional_Charges__c/Additional_Charges__c.object-meta.xml
<CustomObject>
    <description>SP-168: new Object for storing all the Additional charges and asset during Contract creation.</description>
    <label>Additional Charges</label>
    <nameField>
        <displayFormat>add-{00000}</displayFormat>
        <label>Additional Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>