force-app/main/default/objects/Additional_Charges__c/fields/Billable_Account__c.field-meta.xml
<CustomField>
    <fullName>Billable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billable Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Charges (Billable Account)</relationshipLabel>
    <relationshipName>Additional_Charges1</relationshipName>
    <type>Lookup</type>
</CustomField>