force-app/main/default/objects/Additional_Charges__c/fields/City_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>City_ZipCode__c</fullName>
    <description>for pp</description>
    <label>City/ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>