force-app/main/default/objects/Additional_Charges__c/fields/Deposit_Method_for_Asset__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Method_for_Asset__c</fullName>
    <formula>Text( Id_Asset__r.Deposit_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Method for Asset</label>
    <type>Text</type>
</CustomField>