force-app/main/default/objects/Additional_Charges__c/fields/External_Sales_Agency__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Agency__c</fullName>
    <formula>TEXT(Id_Opportunity__r.External_Sales_Agency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Sales Agency</label>
    <type>Text</type>
</CustomField>