force-app/main/default/objects/Additional_Charges__c/fields/Id_Account__c.field-meta.xml
<CustomField>
    <fullName>Id_Account__c</fullName>
    <label>Id Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>