force-app/main/default/objects/Additional_Charges__c/fields/Id_Asset__c.field-meta.xml
<CustomField>
    <fullName>Id_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>lookup field to ASSET__C for SP-235</description>
    <label>Id Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>