force-app/main/default/objects/Additional_Charges__c/fields/Id_List_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Product_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id List Product Price</label>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>