force-app/main/default/objects/Additional_Charges__c/fields/Id_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>