force-app/main/default/objects/Additional_Charges__c/fields/Id_Opportunity_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Opportunity Quote Line Item</label>
    <referenceTo>Opportunity_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>