force-app/main/default/objects/Additional_Charges__c/fields/Id_Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>Id_Replacement_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Replacement Order</label>
    <referenceTo>Replacement_Order__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>