force-app/main/default/objects/Additional_Charges__c/fields/Installments__c.field-meta.xml
<CustomField>
    <fullName>Installments__c</fullName>
    <label>Installments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>