force-app/main/default/objects/Additional_Charges__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <length>55</length>
    <type>Text</type>
</CustomField>