force-app/main/default/objects/Additional_Charges__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <label>Migration ID</label>
    <type>TextArea</type>
</CustomField>