force-app/main/default/objects/Additional_Charges__c/fields/ON_UpsertableSE__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertableSE__c</fullName>
    <formula>NOT(ISBLANK(Id_Account__c)) 
&amp;&amp; 
OR(RecordType.DeveloperName = &quot;SE_Additional_Charges&quot; ,RecordType.DeveloperName = &quot;FI_Additional_Charges&quot;)
&amp;&amp; (ISPICKVAL(Status__c , &apos;Active&apos; )||ISPICKVAL(Status__c , &apos;Terminated&apos; )) 
&amp;&amp;  Id_Account__r.ON_UpsertableSE__c
&amp;&amp; CreatedDate &gt; DATETIMEVALUE(&quot;2018-01-01 00:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connector: UpsertableSE</label>
    <type>Checkbox</type>
</CustomField>