force-app/main/default/objects/Additional_Charges__c/fields/ON_UpsertFailed__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the record was marked in the process which runs the JustOn-Connector to transfer the record. However the transfer was not completed.</description>
    <inlineHelpText>If checked the record was marked in the process which runs the JustOn-Connector to transfer the record. However the transfer was not completed.</inlineHelpText>
    <label>Connector: Upsert Failed</label>
    <type>Checkbox</type>
</CustomField>