force-app/main/default/objects/Additional_Charges__c/fields/ON_UpsertNew__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertNew__c</fullName>
    <description>New records which are ready to be transferred by the JustOn Connector.</description>
    <formula>ISBLANK(ON_LastUpsert__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New records which are ready to be transferred by the JustOn Connector.</inlineHelpText>
    <label>Connector: Upsert New</label>
    <type>Checkbox</type>
</CustomField>