force-app/main/default/objects/Additional_Charges__c/fields/Opportunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Level__c</fullName>
    <description>Opportunity Level for korea</description>
    <formula>Text( Id_Opportunity__r.Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Level</label>
    <type>Text</type>
</CustomField>