force-app/main/default/objects/Additional_Charges__c/fields/Pre_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Pre_Invoice_Number__c</fullName>
    <description>Temporary Invoice number for Australia billing</description>
    <label>Pre-Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>