force-app/main/default/objects/Additional_Charges__c/fields/Quote_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Start_Date__c</fullName>
    <formula>Id_Opportunity_Quote_Line_Item__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Start Date</label>
    <type>Date</type>
</CustomField>