force-app/main/default/objects/Additional_Charges__c/fields/Rabbat__c.field-meta.xml
<CustomField>
    <fullName>Rabbat__c</fullName>
    <label>Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>