force-app/main/default/objects/Additional_Charges__c/fields/Rogan_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Rogan_Product_Name__c</fullName>
    <label>Rogan Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>