force-app/main/default/objects/Additional_Charges__c/fields/RoganAddChargeAPIError__c.field-meta.xml
<CustomField>
    <fullName>RoganAddChargeAPIError__c</fullName>
    <label>RoganAddChargeAPIError</label>
    <length>255</length>
    <type>Text</type>
</CustomField>