force-app/main/default/objects/Additional_Charges__c/fields/Run_Approval_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Approval_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true in Approval Process APAC_Standard_Approval_For_Add_Charges to deal with sel-approval issue. Visible for all profiles, but not added to any Layout.</description>
    <label>Run Approval Trigger</label>
    <type>Checkbox</type>
</CustomField>