force-app/main/default/objects/Additional_Charges__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>termination date for Additional Charges termination SP-235</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>