force-app/main/default/objects/Additional_Charges__c/recordTypes/AT_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>AT_Additional_Charges</fullName>
    <active>true</active>
    <label>AT Additional Charges</label>
</RecordType>