force-app/main/default/objects/Additional_Charges__c/recordTypes/CD_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>CD_Additional_Charges</fullName>
    <active>true</active>
    <label>CD Additional Charges</label>
</RecordType>