force-app/main/default/objects/Additional_Charges__c/recordTypes/CZ_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>CZ_Additional_Charges</fullName>
    <active>true</active>
    <description>Czech Republic Additional Charges</description>
    <label>CZ Additional Charges</label>
</RecordType>