force-app/main/default/objects/Additional_Charges__c/recordTypes/DE_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>DE_Additional_Charges</fullName>
    <active>true</active>
    <label>DE Additional Charges</label>
</RecordType>