force-app/main/default/objects/Additional_Charges__c/recordTypes/DH_AU_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Additional_Charges</fullName>
    <active>true</active>
    <label>DH AU Additional Charges</label>
</RecordType>