force-app/main/default/objects/Additional_Charges__c/recordTypes/FI_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>FI_Additional_Charges</fullName>
    <active>true</active>
    <label>FI Additional Charges</label>
</RecordType>