force-app/main/default/objects/Additional_Charges__c/recordTypes/FP_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>FP_Additional_Charges</fullName>
    <active>true</active>
    <label>FP Additional Charges</label>
</RecordType>