force-app/main/default/objects/Additional_Charges__c/recordTypes/HU_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>HU_Additional_Charges</fullName>
    <active>true</active>
    <description>Hungary Additional Charges</description>
    <label>HU Additional Charges</label>
</RecordType>