force-app/main/default/objects/Additional_Charges__c/recordTypes/PY_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>PY_Additional_Charges</fullName>
    <active>true</active>
    <description>Record type for Pedidos Ya and in future to be global for all countries</description>
    <label>PY Additional Charges</label>
</RecordType>