force-app/main/default/objects/Additional_Charges__c/recordTypes/SE_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>SE_Additional_Charges</fullName>
    <active>true</active>
    <label>SE Additional Charges</label>
</RecordType>