force-app/main/default/objects/Additional_Charges__c/recordTypes/Talabat_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Additional_Charges</fullName>
    <active>true</active>
    <label>Talabat Additional Charges</label>
</RecordType>