force-app/main/default/objects/Additional_Charges__c/recordTypes/UK_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>UK_Additional_Charges</fullName>
    <active>true</active>
    <label>UK Additional Charges</label>
</RecordType>