force-app/main/default/objects/Additional_Charges__c/recordTypes/Yogiyo_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Additional_Charges</fullName>
    <active>true</active>
    <label>Yogiyo Additional Charges</label>
</RecordType>