force-app/main/default/objects/Additional_Charges__c/listViews/Australia_EP_Charges.listView-meta.xml
<ListView>
    <fullName>Australia_EP_Charges</fullName>
    <columns>NAME</columns>
    <columns>Deposit_Method_for_Asset__c</columns>
    <columns>Id_Account__c</columns>
    <columns>Id_Asset__c</columns>
    <columns>Id_Opportunity__c</columns>
    <columns>Installments__c</columns>
    <columns>Listed_Price__c</columns>
    <columns>Pre_Invoice_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Additional_Charges__c.DH_AU_Additional_Charges</value>
    </filters>
    <filters>
        <field>Id_Asset__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Australia EP Charges</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>