force-app/main/default/objects/Additional_Charges__c/listViews/CD_Charges_Ecuador.listView-meta.xml
<ListView>
    <fullName>CD_Charges_Ecuador</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Id_Account__c</columns>
    <columns>Id_Asset__c</columns>
    <columns>Id_Opportunity__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Termination_Reason__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Additional_Charges__c.CD_Additional_Charges</value>
    </filters>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>CD - Charges - Ecuador</label>
    <language>en_US</language>
    <sharedTo>
        <role>CD_Management</role>
        <roleAndSubordinates>CD_Customer_Care</roleAndSubordinates>
        <roleAndSubordinates>CD_Sales_Management_Colombia</roleAndSubordinates>
    </sharedTo>
</ListView>