force-app/main/default/objects/Additional_Charges__c/listViews/TLB_Charges_Jordan.listView-meta.xml
<ListView>
    <fullName>TLB_Charges_Jordan</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Id_Opportunity__c</columns>
    <columns>Id_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Additional_Charges__c.Talabat_Additional_Charges</value>
    </filters>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>JOD</value>
    </filters>
    <label>TLB - Charges - Jordan</label>
    <language>en_US</language>
    <sharedTo>
        <role>Talabat_Management</role>
        <roleAndSubordinates>Talabat_Operation_Management</roleAndSubordinates>
        <roleAndSubordinates>Talabat_Sales_Management_Jordan</roleAndSubordinates>
    </sharedTo>
</ListView>